@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.53-1lsb3.2.i486.rpm 3557948 BLAKE2B 5c135048fe4b4b1a7d6503c7f313baaf7c31a4582d29569023e67fca9a6e793ff1f48bd9e24cb707a57153e22ec8669934307193c3dd3f9009ff43cf3dff3575 SHA512 e3ef3174a1bfff4c66e318cc27650607cf9af7dea107bc56adee81ffdcbee4a13a68bd2ed8641f837b7db1937ee3fab3fe243c84380c671724bd083daadda638
-DIST epson-inkjet-printer-escpr2-1.1.53-1lsb3.2.x86_64.rpm 3557459 BLAKE2B 5f538657a6491697debee838ef95357d0b057e478c8958fdfd0cd0700cea8f270a4fb4d15944346ac909e8eccc38a92300e3f4572f475c3dfa233a1bea91e91d SHA512 909edc9a9e097bc8f6f16cd011b5c679b1f1188a2c403c6ad1515362f72666f96978c30a1fbfdc9ddd1eb72801885822aab43792c18fa4f1797f4614043cb958
 DIST epson-inkjet-printer-escpr2-1.1.54-1lsb3.2.i486.rpm 3567002 BLAKE2B 371c7f8419e00cf98a9e9f55223a41a66a68bb1d8f39eab97000c5a5f71343227fb65c41c6726163849250936e512217756cffda2fa3dac8556faec7a1ff5161 SHA512 277c344f6fe6b29d48f743fa6450070b8ceb83b0e1b07ae3fdd16336e3a63ba7bf2f3705b9185623aba5e5d8dad6b30e2fb733b22cb785750e42f2d9e2fc43ce
 DIST epson-inkjet-printer-escpr2-1.1.54-1lsb3.2.x86_64.rpm 3566506 BLAKE2B f1d9452fb501e2b32a952e5756b9267282f919c835cabe16eb66ed01a8dc2545251f40d1c0216c49efc72da2c6ba14084b38f7aa4d3248dfcc2489319eb1446e SHA512 b570d8e163f346050be6c1aaa73d11b5710302f68a1938d342e4bc9d62ab89726b835c8a511c957129571747b301555d3f74fbfb91b7fcc40fad0f9654b71072
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.53.ebuild 1670 BLAKE2B 8d8746ee54aae39488a800aee2873a081278433b76fcd04096c82dc407398c000b5d95d5c504d9819ff44e4fe3544fde82e6f59034a0dd9c6a7a3d02a768a2b1 SHA512 40aad9451dd13f9370e5d3b11e49ced6fd1242484c4136c8809bb1ccb2184c5317ebfb0c7c07955947c300cc6803442411213e26ba59387fc93495d446f3cc89
+DIST epson-inkjet-printer-escpr2-1.1.55-1lsb3.2.i486.rpm 3593988 BLAKE2B ba8f501dc6717db035ffe13ee8dfc3214e5d2c44ccba7cdb1e5b740e171a92a07e55c368af61553435006ca89890a4aaa8a29b4e3ceb60d79de623967554e7c8 SHA512 e988ca024050656f7cf84508935a6a643db169890513f906d80c932985485603c0bf1c5a5c998e54739fe1f673d5969bc68a78df3ce53f7dd724c7ac03cf1b81
+DIST epson-inkjet-printer-escpr2-1.1.55-1lsb3.2.x86_64.rpm 3593472 BLAKE2B d99b923b126463b579a27dd6dfa0740a7cf44edc796b4e8c3b05e8521726703a0966e8cdcc7b6b260e8e78c84136e1db54998f7229109b85c90404ec85e6897a SHA512 1c187ee3934e07258293694e78b153cececdcb84973a08802d1d463b7798440f1083365790799a6b0c3f057a8af465a15937a4837f4f12dd3e9c352508121062
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.54.ebuild 1670 BLAKE2B 232aab99a4fe63f20c8185d1b1c6cfeb8690cbda83cd00cad9c4aa74879a822e859db79eddf6da16f96a44407340e3ba1848a4bc46034d37837d8441ad0892de SHA512 5a48494943a54920e44ddfe6343e7c0b4cd756ae6ac008dd0cc2dce3c898e201c794f26bece87fea3d352159102baae81f4f16c1ccf3f73f89e0cd317438021d
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.55.ebuild 1670 BLAKE2B 508fd4021562993792cf4eb285e8b92357e5b1c0835abadd5ef8f08a95298fb8f0f09898bd109e2f98a998d5624520c2a8e0ff20fb0a739002e64546cb390327 SHA512 a0b087e14bb8552a80a7f7d31f35b7b49b58b2bd397a4a1f6e0b89542600b59c227cd1fd9fcc9fa0ea9d4b5e8f910d273dda5df91c50263e951c6589c2a81830
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
